--- a/examples/image_segmentation/ios/ImageSegmenter/Base.lproj/Main.storyboard
+++ b/examples/image_segmentation/ios/ImageSegmenter/Base.lproj/Main.storyboard
@@ -313,6 +313,12 @@
                                             <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="8"/>
                                         </userDefinedRuntimeAttributes>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delegate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YxQ-gN-d7u">
+                                        <rect key="frame" x="16" y="163.66666666666666" width="58" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yVG-hd-M4f">
                                         <rect key="frame" x="0.0" y="10" width="393" height="41"/>
                                         <constraints>
@@ -346,19 +352,42 @@
                                             <constraint firstAttribute="height" constant="1" id="AoB-zB-ONR"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fri-ED-pXc">
+                                        <rect key="frame" x="353" y="156" width="24" height="32"/>
+                                        <color key="backgroundColor" red="0.0" green="0.49803921569999998" blue="0.5450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="HzS-Sj-fqa"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <menu key="menu" id="7Dq-9d-rWP">
+                                            <children>
+                                                <command title="item1" id="Rtx-vH-AOp"/>
+                                                <command title="item2" id="xaO-1W-Y3u"/>
+                                            </children>
+                                        </menu>
+                                        <buttonConfiguration key="configuration" style="plain"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="8"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="0.79932968280000005" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="yVG-hd-M4f" secondAttribute="trailing" id="0SQ-eB-DPC"/>
+                                    <constraint firstItem="YxQ-gN-d7u" firstAttribute="centerY" secondItem="fri-ED-pXc" secondAttribute="centerY" id="2Hg-bw-Gwr"/>
                                     <constraint firstItem="yVG-hd-M4f" firstAttribute="leading" secondItem="ICe-lk-Zf0" secondAttribute="leading" id="5go-tk-NEY"/>
                                     <constraint firstItem="vhY-fZ-dpb" firstAttribute="leading" secondItem="ICe-lk-Zf0" secondAttribute="leading" constant="16" id="7Db-If-hnV"/>
+                                    <constraint firstAttribute="trailing" secondItem="fri-ED-pXc" secondAttribute="trailing" constant="16" id="7zy-E6-UOB"/>
                                     <constraint firstItem="bjd-S4-RSJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="cDY-8u-uzj" secondAttribute="trailing" id="DRc-Mn-LpX"/>
+                                    <constraint firstItem="fri-ED-pXc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="YxQ-gN-d7u" secondAttribute="trailing" id="FEA-9n-SXH"/>
                                     <constraint firstItem="aGZ-uI-GST" firstAttribute="top" secondItem="ICe-lk-Zf0" secondAttribute="top" id="GCY-5l-jbd"/>
+                                    <constraint firstItem="YxQ-gN-d7u" firstAttribute="leading" secondItem="ICe-lk-Zf0" secondAttribute="leading" constant="16" id="Hck-gO-ZYZ"/>
                                     <constraint firstItem="cDY-8u-uzj" firstAttribute="top" secondItem="yVG-hd-M4f" secondAttribute="bottom" constant="32" id="J38-21-nvx"/>
                                     <constraint firstItem="yVG-hd-M4f" firstAttribute="top" secondItem="ICe-lk-Zf0" secondAttribute="top" constant="10" id="RRU-S3-QVa"/>
                                     <constraint firstAttribute="trailing" secondItem="aGZ-uI-GST" secondAttribute="trailing" id="S8a-7w-D1X"/>
                                     <constraint firstItem="MDQ-3V-hIt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vhY-fZ-dpb" secondAttribute="trailing" id="TG2-tr-5a5"/>
                                     <constraint firstItem="aGZ-uI-GST" firstAttribute="leading" secondItem="ICe-lk-Zf0" secondAttribute="leading" id="UWc-hZ-Ibo"/>
+                                    <constraint firstItem="fri-ED-pXc" firstAttribute="top" secondItem="MDQ-3V-hIt" secondAttribute="bottom" constant="12" id="YwD-D3-smk"/>
                                     <constraint firstAttribute="trailing" secondItem="MDQ-3V-hIt" secondAttribute="trailing" constant="16" id="ojk-t9-oIt"/>
                                     <constraint firstAttribute="trailing" secondItem="bjd-S4-RSJ" secondAttribute="trailing" constant="16" id="pu1-LS-UPD"/>
                                     <constraint firstItem="MDQ-3V-hIt" firstAttribute="top" secondItem="bjd-S4-RSJ" secondAttribute="bottom" constant="12" id="t6y-cD-sug"/>
@@ -380,6 +409,7 @@
                     <navigationItem key="navigationItem" id="k1T-Vr-SMF"/>
                     <connections>
                         <outlet property="choseModelButton" destination="MDQ-3V-hIt" id="pNW-Iv-Wle"/>
+                        <outlet property="delegateButton" destination="fri-ED-pXc" id="FAu-Cf-Y4F"/>
                         <outlet property="inferenceTimeLabel" destination="bjd-S4-RSJ" id="d96-OL-zdf"/>
                         <outlet property="inferenceTimeNameLabel" destination="cDY-8u-uzj" id="VkB-2k-yfy"/>
                         <outlet property="toggleBottomSheetButton" destination="yVG-hd-M4f" id="hCX-Dl-6Lq"/>
